[project]
name = "lumos-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-instrumentation-asgi>=0.63b1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-sdk>=1.42.1",
    "uvicorn>=0.49.0",
]
